fix categorie card overflow issue

--- a/src/styles/05-components/_components.categorie-card.less
+++ b/src/styles/05-components/_components.categorie-card.less
@@ -12,6 +12,9 @@
     bottom: 0;
     right: 0;
     z-index: 1;
+    width: 100%;
+    overflow: hidden;
+    display: block;
   }
 
   &__bg-image {
@@ -29,6 +32,8 @@
     left: 0;
     background: transparent linear-gradient(0deg, #000000D4 0%, #545454 100%) 0% 0% no-repeat padding-box;
     opacity: 0.88;
+    width: 100%;
+    display: block;
   }
 
   &__content {
